Use ament for turtlebot_description and create_description

--- a/create_description/CMakeLists.txt
+++ b/create_description/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(create_description)
 
-find_package(catkin REQUIRED)
+find_package(ament_cmake REQUIRED)
 
-catkin_package(CATKIN_DEPENDS urdf xacro)
+ament_package()
 
 install(DIRECTORY meshes
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+        DESTINATION share/${PROJECT_NAME}/)
 install(DIRECTORY urdf
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+        DESTINATION share/${PROJECT_NAME}/)
