--- a/turtlebot_description/package.xml
+++ b/turtlebot_description/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>turtlebot_description</name>
   <version>2.4.2</version>
   <description>
@@ -12,13 +12,9 @@
   <url type="repository">https://github.com/turtlebot/turtlebot</url>
   <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>
   
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>urdf</build_depend>
-  <build_depend>xacro</build_depend>
-
-  <run_depend>urdf</run_depend>
-  <run_depend>xacro</run_depend>
-  <run_depend>kobuki_description</run_depend>
-  <run_depend>create_description</run_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
